# video-reverse-engineering

./: .gitignore  README.md  main.py  main2.py  pyproject.toml
examples/: basic_pipeline.py  embedding_search.py  evaluate_video.py
reverse_engine/: __init__.py  clips.py  download.py  embeddings_store.py  evaluate.py  keyframes.py  models.py  pipeline.py  report.py  scenes.py  stems.py  timeline.py  transcript.py
reverse_engine/gemini/: audio.py  client.py  embeddings.py  text.py  visual.py
tests/: test_gemini_audio.py  test_gemini_client.py  test_gemini_text.py  test_gemini_visual.py  test_keyframes.py  test_models.py  test_report.py  test_transcript.py
